# Web-agent

./: API.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  USER-GUIDE.md  Web_agent_Колесников_Иванов_Кирсанов_Виноградов_Головина_Колбасин.docx  config.json  tasks_api.md
releases/linux/: Web-agent  config.json
src/: main.cpp
src/agent/: Agent.cpp  Agent.h
src/config/: Config.h  ConfigManager.cpp  ConfigManager.h
src/http/: CurlWrapper.h  HttpClient.cpp  HttpClient.h
src/logging/: Logger.h
src/tasks/: Task.h  TaskExecutor.cpp  TaskExecutor.h
